--- a/buzzer/templates/reservation.html
+++ b/buzzer/templates/reservation.html
@@ -7,7 +7,7 @@
     var btn=document.getElementById('btn');
     var xhr=new XMLHttpRequest();
     var username='{{username}}';
-
+    
     btn.addEventListener("click", function(){simple(this.innerHTML);});
 
     function simple(event) {
@@ -15,7 +15,7 @@
         xhr.setRequestHeader('X-CSRFToken', '{{ csrf_token }}');
         xhr.setRequestHeader('Content-Type', 'application/json');
         xhr.send(JSON.stringify({
-            'message': username+"님이"+event+"게시물을 공유했습니다."
+            'message': username
         }));
     };
 </script>
